--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # <-- pip install -r requirements.txt
           pip install pytest pytest-cov
 
       - name: Run tests with coverage
@@ -33,7 +33,7 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
-          projectKey: sumanbdev_ExpressedRealms      # <-- Update this to your actual key
+          projectKey: sumanbdev_cbs-Impl      # <-- Update this to your actual key
           organization: sumanbdev                    # <-- Update this to your org/account
           token: ${{ secrets.SONAR_TOKEN }}
         env:
