--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r Automated_Mailing/requirements.txt
           pip install pylint
 
-      - name: Run Pylint
+      - name: Run Pylint on Automated_Mailing/
         run: |
-          pylint $(git ls-files '*.py')
+          pylint Automated_Mailing/*.py
